<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_update_setting" >
      

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary" 
            android:entryValues="@array/syncFrequencyValues"
            android:defaultValue="0"
            android:title="@string/pref_sync_frequency" />

           <ListPreference
            android:key="prefSyncFrequencyParanoia"
            android:entries="@array/syncFrequencyParanoia"
            android:summary="@string/pref_sync_frequency_summary_paranoia" 
            android:entryValues="@array/syncFrequencyValuesParanoia"
            android:defaultValue="0"
            android:title="@string/pref_sync_frequency_paranoia" />
        
          
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting_ayuda" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>

    </PreferenceCategory>
    

</PreferenceScreen>